# libxmtp

bindings_ffi/src/: mls.rs
dev/docker/: docker-compose.yml
xmtp_api/src/: test_utils.rs
xmtp_api_d14n/: Cargo.toml
xmtp_api_d14n/src/: lib.rs
xmtp_api_d14n/src/endpoints/d14n/: get_inbox_ids.rs  publish_client_envelopes.rs  query_envelopes.rs
xmtp_api_d14n/src/endpoints/v3/identity/: get_identity_updates_v2.rs  get_inbox_ids.rs  publish_identity_update.rs  verify_smart_contract_wallet_signatures.rs
xmtp_api_d14n/src/endpoints/v3/mls/: fetch_key_packages.rs  query_group_messages.rs  query_welcome_messages.rs  send_group_messages.rs  send_welcome_messages.rs  upload_key_package.rs
xmtp_api_grpc/src/: grpc_api_helper.rs  grpc_client.rs  lib.rs
xmtp_api_http/src/: http_client.rs  lib.rs  util.rs
xmtp_mls/src/: builder.rs
xmtp_mls/src/groups/: mls_sync.rs  mod.rs
xmtp_mls/src/groups/device_sync/: backup.rs
xmtp_mls/src/storage/encrypted_store/: mod.rs  native.rs
xmtp_mls/src/utils/bench/: clients.rs
xmtp_mls/src/utils/test/: mod.rs
xmtp_proto/: Cargo.toml
xmtp_proto/src/: api_client.rs  lib.rs  traits.rs
