[package]
name = "xmtp_api_d14n"
edition = "2021"
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
ctor.workspace = true
derive_builder = "0.20"
once_cell.workspace = true
parking_lot.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing.workspace = true
xmtp_common.workspace = true
xmtp_proto = { workspace = true, features = ["convert"] }

xmtp_api_http = { workspace = true, optional = true }

[dev-dependencies]
xmtp_proto = { workspace = true, features = ["convert", "test-utils"] }
xmtp_common = { workspace = true, features = ["test-utils"] }
wasm-bindgen-test.workspace = true
hex.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
xmtp_api_grpc = { workspace = true, features = ["test-utils"] }
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
xmtp_api_http.workspace = true
tokio.workspace = true

[features]
default = ["grpc-api"]
http-api = ["xmtp_proto/http-api", "xmtp_api_http"]
grpc-api = ["xmtp_proto/grpc-api"]
test-utils = []
